# Scribe

./: .gitignore  README.md  pyproject.toml  scribe.config.json
scribe/: __init__.py  cli.py  color.py  config.py  elevation.py  exporter.py  host.py  search.py  session.py
scribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_elevation.py  test_exporter.py  test_search.py
